Change rendering of pipeline step settings to fix wrapping issue.

--- a/src/components/workflow/workflows.css
+++ b/src/components/workflow/workflows.css
@@ -154,3 +154,15 @@
     z-index: 1200;
 }
 
+.settings-sidebar {
+  height: 100%; /* 100% Full-height */
+  width: 550px; /* 0 width - change this with JavaScript */
+  position: fixed; /* Stay in place */
+  bottom: 0; /* Stay at the top */
+  right: 0;
+  background-color: #fff;; /* Black*/
+  overflow-x: hidden; /* Disable horizontal scroll */
+  padding-top: 65px;
+  transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+  z-index:100;
+}
