--- a/src/theme.css
+++ b/src/theme.css
@@ -818,6 +818,16 @@ a.nav-link {
   /*border-radius: .25rem;*/
 }
 
+.content-container-shadow {
+  -moz-box-shadow: 0px 2px 8px #8F86BB; /* Firefox */
+  -webkit-box-shadow: 0px 2px 8px #8F86BB; /* Safari, Chrome */
+  box-shadow: 0px 2px 8px #8F86BB; /* CSS3 */
+
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+}
+
 /* Content Card 1 Styling */
 
 .content-card-1 {
